--- a/scss/header.scss
+++ b/scss/header.scss
@@ -12,9 +12,12 @@
 
 .header {
   @include flex;
-  width: 100vw;
   background-color: white;
   height: 55px;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  left: 0px;
 }
 
 .header__left-side {
