--- a/css/header.css
+++ b/css/header.css
@@ -10,11 +10,12 @@
       -ms-flex-align: center;
           align-items: center;
   background-color: white;
-  height: 55px;
+  height: 56px;
   position: fixed;
   top: 0px;
   right: 0px;
   left: 0px;
+  border-bottom: 1px solid rgb(235, 235, 235);
 }
 
 .header__left-side {
@@ -62,7 +63,7 @@
       -ms-flex: 1;
           flex: 1;
   width: 0px;
-  max-width: 380px;
+  max-width: 340px;
   min-width: 1px;
   padding-left: 12px;
   background-color: white;
