--- a/scss/header.scss
+++ b/scss/header.scss
@@ -11,11 +11,12 @@ $icon-height: 24px;
 .header {
   @include flex;
   background-color: white;
-  height: 55px;
+  height: 56px;
   position: fixed;
   top: 0px;
   right: 0px;
   left: 0px;
+  border-bottom: 1px solid rgb(235, 235, 235);
 }
 
 .header__left-side {
@@ -46,7 +47,7 @@ $icon-height: 24px;
   height: 36px;
   flex: 1;
   width: 0px;
-  max-width: 380px;
+  max-width: 340px;
   min-width: 1px;
   padding-left: 12px;
   background-color: white;
