--- a/css/header.css
+++ b/css/header.css
@@ -11,11 +11,12 @@
           align-items: center;
   background-color: white;
   height: 56px;
+  z-index: 10;
   position: fixed;
   top: 0px;
   right: 0px;
   left: 0px;
-  border-bottom: 1px solid rgb(235, 235, 235);
+  border-bottom: 1px solid rgb(218, 218, 218);
 }
 
 .header__left-side {
@@ -63,8 +64,8 @@
       -ms-flex: 1;
           flex: 1;
   width: 0px;
-  max-width: 340px;
-  min-width: 1px;
+  max-width: 342px;
+  border-radius: 2px;
   padding-left: 12px;
   background-color: white;
   -webkit-box-shadow: inset 1px 1px 2px rgb(241, 241, 241);
@@ -147,8 +148,32 @@
   width: 24px;
 }
 
+.header__notifications-container {
+  position: relative;
+}
+
+.header__notifications-number {
+  z-index: 100;
+  position: absolute;
+  top: -1px;
+  right: -7px;
+  height: 15px;
+  width: 5.6167px;
+  padding: 0px 5px;
+  border-radius: 10px;
+  border: 2px solid white;
+  font-size: 11px;
+  background-color: rgb(206, 0, 0);
+  color: white;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .header__notifications-icon {
-  width: 24px;
+  position: relative;
+  top: 2px;
+  height: 24px;
 }
 
 .header__profile-picture {
