--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -7,6 +7,7 @@ $icon-height: 24px;
   flex-direction: column;
   justify-content: flex-start;
   gap: 1px;
+  z-index: 200;
   position: fixed;
   top: 55px;
   left: 0;
@@ -21,6 +22,7 @@ $icon-height: 24px;
 .sidebar__icon-container {
   width: 100%;
   color: rgb(43, 43, 43);
+  z-index: 200;
   padding: 15px 0px;
   display: flex;
   flex-direction: column;
