--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -45,6 +45,7 @@
   font-size: 10px;
   font-family: "Roboto";
   gap: 6px;
+  cursor: pointer;
 }
 .sidebar__icon-container:hover {
   background-color: rgb(223, 223, 223);
