--- a/scss/header.scss
+++ b/scss/header.scss
@@ -29,10 +29,12 @@ $icon-height: 24px;
 
 .header__hambuguer-menu {
   width: $icon-height;
+  cursor: pointer;
 }
 
 .header__youtube-logo {
   height: 20px;
+  cursor: pointer;
 }
 
 /*HEADERS MIDDLE SIDE*/
@@ -67,18 +69,57 @@ $icon-height: 24px;
   }
 }
 
-.header__search-button {
+.header__search-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
   height: 40px;
   border: 1px solid rgb(190, 190, 190);
   border-left: none;
   width: 64px;
   background-color: rgb(243, 243, 243);
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgb(230, 230, 230);
+  }
+
+  &:hover .header__popup {
+    opacity: 1;
+  }
 }
 
 .header__search-icon {
   width: $icon-height;
   position: relative;
-  top: 2px;
+}
+
+.header__popup {
+  position: absolute;
+  white-space: nowrap;
+  opacity: 0;
+  top: 50px;
+  padding: 8px;
+  border-radius: 4px;
+  color: white;
+  background-color: rgba(96, 96, 96, 0.9);
+  font-size: 12px;
+  transition: all 0.15s;
+}
+
+.header__icon-container {
+  position: relative;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.15s;
+
+  &:hover .header__popup {
+    opacity: 1;
+  }
 }
 
 .header__voice-search-icon {
@@ -88,6 +129,7 @@ $icon-height: 24px;
   padding: 8px;
   background-color: rgb(250, 250, 250);
   border-radius: 20px;
+  cursor: pointer;
 }
 
 /*HEADERS RIGHT SIDE*/
@@ -100,17 +142,16 @@ $icon-height: 24px;
 
 .header__upload-icon {
   width: $icon-height;
+  cursor: pointer;
 }
 .header__apps-icon {
   width: $icon-height;
-}
-.header__notifications-container {
-  position: relative;
+  cursor: pointer;
 }
 .header__notifications-number {
   z-index: 100;
   position: absolute;
-  top: -1px;
+  top: -3px;
   right: -7px;
   height: 15px;
   width: 5.6167px;
@@ -125,10 +166,11 @@ $icon-height: 24px;
 
 .header__notifications-icon {
   position: relative;
-  top: 2px;
   height: 24px;
+  cursor: pointer;
 }
 .header__profile-picture {
   height: 32px;
   border-radius: 22px;
+  cursor: pointer;
 }
