--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -31,6 +31,7 @@ $icon-height: 24px;
   font-size: 10px;
   font-family: "Roboto";
   gap: 6px;
+  cursor: pointer;
 
   &:hover {
     background-color: rgb(223, 223, 223);
